--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://user:password@localhost:5432/postgres"
+
+# https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET='Example'
+
+GITHUB_ID='Example'
+GITHUB_SECRET='Example'
