Setup Google Provider

--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,6 @@ NEXTAUTH_SECRET='Example'
 
 GITHUB_ID='Example'
 GITHUB_SECRET='Example'
+
+GOOGLE_CLIENT_ID='Example'
+GOOGLE_CLIENT_SECRET='Example'
