--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
+    "@auth/prisma-adapter": "^1.3.3",
+    "@prisma/client": "^5.9.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -29,6 +30,6 @@
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
-    "prisma": "^5.3.1"
+    "prisma": "^5.9.1"
   }
 }
