--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^4.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -29,6 +30,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "eslint-config-airbnb-base": "^15.0.0",
     "prisma": "^5.9.1"
   }
